<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/host_edit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_edit_label"
            app:layout_constraintBottom_toTopOf="@+id/host_edit_text"
            app:layout_constraintStart_toStartOf="@+id/host_edit_text"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/host_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/host_address"
            app:layout_constraintBottom_toTopOf="@+id/ssl_edit_label"
            app:layout_constraintEnd_toStartOf="@+id/host_edit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/host_edit_label" />

        <Button
            android:id="@+id/host_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/host_edit_text"
            app:layout_constraintTop_toTopOf="@+id/host_edit_text" />

        <TextView
            android:id="@+id/ssl_edit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssl_edit_label"
            app:layout_constraintBottom_toTopOf="@+id/ssl_edit_text"
            app:layout_constraintStart_toStartOf="@+id/ssl_edit_text"
            app:layout_constraintTop_toBottomOf="@id/host_edit_text" />

        <EditText
            android:id="@+id/ssl_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/ssl_address"
            app:layout_constraintBottom_toTopOf="@+id/assets_edit_label"
            app:layout_constraintEnd_toStartOf="@+id/ssl_edit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ssl_edit_label" />

        <Button
            android:id="@+id/ssl_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ssl_edit_text"
            app:layout_constraintTop_toTopOf="@+id/ssl_edit_text" />

        <TextView
            android:id="@+id/assets_edit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_edit_label"
            app:layout_constraintBottom_toTopOf="@+id/assets_edit_text"
            app:layout_constraintStart_toStartOf="@+id/assets_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/ssl_edit_text" />

        <EditText
            android:id="@+id/assets_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/asset_address"
            app:layout_constraintEnd_toStartOf="@+id/assets_edit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assets_edit_label" />

        <Button
            android:id="@+id/assets_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/assets_edit_text"
            app:layout_constraintTop_toTopOf="@+id/assets_edit_text" />


        <TextView
            android:id="@+id/proxy_edit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proxy_edit_label"
            app:layout_constraintBottom_toTopOf="@+id/proxy_edit_text"
            app:layout_constraintStart_toStartOf="@+id/proxy_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/assets_edit_text" />

        <EditText
            android:id="@+id/proxy_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/proxy_address"
            app:layout_constraintEnd_toStartOf="@+id/proxy_edit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proxy_edit_label" />

        <Button
            android:id="@+id/proxy_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/proxy_edit_text"
            app:layout_constraintTop_toTopOf="@+id/proxy_edit_text" />

        <Button
            android:id="@+id/server_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_server_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/home_help_text"
            app:layout_constraintEnd_toEndOf="@+id/assets_edit_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/proxy_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/proxy_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>